--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <h1>Sri Sai Krishna Bathula</h1>
         <h2>Favorite vacation spot</h2>
         <p>My favorite vacation spot is <b>Hoskote</b>, located in Bangalore, Karnataka state, India. I often go for bike rides with my <b>friends</b> in cold weather, wear jackets and enjoy the cool breeze while riding, and go to eat <b>hoskote mani dum biryani</b> at <b>4am</b></p>
-        
+        <hr>
+        <h2>Activites and Food Dishes</h2>
+        <h3>Activities I do at my favorite vacation spot.</h3>
+        <ol>
+            <li>Enjoy the view.</li>
+            <li>Bike ride rod ghat roads.</li>
+            <li>Photoshots.</li>
+        </ol>
     </body>
 </html>
