Added 3 food dishes that I can get at my favorite location in unordered list

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
             <li>Bike ride rod ghat roads.</li>
             <li>Photoshots.</li>
         </ol>
+        <h3>A list of food dishes can be found at my favorite place.</h3>
+        <ul>
+            <li>Goat Biryani.</li>
+            <li>Chicken Kabob.</li>
+            <li>Goat Paya.</li>
+        </ul>
     </body>
 </html>
