Added Table and Browser showing code section

--- a/index.html
+++ b/index.html
@@ -22,5 +22,52 @@
             <li>Goat Paya.</li>
         </ul>
         <a href=“Mystats.html”> My Profile</a>
+
+        <hr>
+
+        <table>
+            <tr>
+                <th>Sport</th>
+                <th>Reason</th>
+                <th>Average time spend weekly</th>
+            </tr>
+            <tr>
+                <td>Cricket</td>
+                <td>This is the most commonly played Sport in all countries</td>
+                <td>4 - 5 Hours</td>
+            </tr>
+            <tr>
+                <td>Tennis</td>
+                <td>This another you can play. After playing this game you feel more active throughout the day</td>
+                <td>5 - 6 Hours</td>
+            </tr>
+            <tr>
+                <td>Basket Ball</td>
+                <td>You can burn for calories. Improve balance and Co-ordination.</td>
+                <td>3 - 5 Hours</td>
+            </tr>
+            <tr>
+                <td>Foot Ball</td>
+                <td>In this game you need run more this helps to improve your heart health and blood pressure. It Improves your concentration.</td>
+                <td>4 - 5 Hours</td>
+            </tr>
+        </table>
+
+        <hr>
+        <blockquote cite=“https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button”> How to newline in HTML Button?
+        </blockquote >
+        <a href=“https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button”> Click here</a>
+
+        <pre>
+            <button>
+            some
+            <br />
+            text
+          </button>
+
+          <input type="button" value="some&#13;&#10;text" />
+
+          <input type="button" value="some&#x00A;text" />
+        </pre>
     </body>
 </html>
