Update index html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li>Chicken Kabob.</li>
             <li>Goat Paya.</li>
         </ul>
-        <a href=“Mystats.html”> My Profile</a>
+        <a href=“https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-saikrishna1419/blob/main/Mystats.html”> My Profile</a>
 
         <hr>
 
