modified few mistakes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>My Web page</title>
     </head>
     <body>
+        <a href="bonus.html"> Ficational Character</a>
         <h1>Sri Sai Krishna Bathula</h1>
         <h2>Favorite vacation spot</h2>
         <p>My favorite vacation spot is <b>Hoskote</b>, located in Bangalore, Karnataka state, India. I often go for bike rides with my <b>friends</b> in cold weather, wear jackets and enjoy the cool breeze while riding, and go to eat <b>hoskote mani dum biryani</b> at <b>4am</b></p>
@@ -21,7 +22,7 @@
             <li>Chicken Kabob.</li>
             <li>Goat Paya.</li>
         </ul>
-        <a href=“https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-saikrishna1419/blob/main/Mystats.html”> My Profile</a>
+        <a href="Mystats.html"> My Profile</a>
 
         <hr>
 
@@ -54,9 +55,9 @@
         </table>
 
         <hr>
-        <blockquote cite=“https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button”> How to newline in HTML Button?
+        <blockquote cite="https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button"> How to newline in HTML Button?
         </blockquote >
-        <a href=“https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button”> Click here</a>
+        <a href="https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button"> Click here</a>
 
         <pre>
             <button>
