--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <hr>
 
-        <table>
+        <table border="2">
             <tr>
                 <th>Sport</th>
                 <th>Reason</th>
