--- a/bonus.html
+++ b/bonus.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<Html>
+<html>
     <Head>
         <title>Bonus</title>
     </Head>
     <body>
-        <h2>Ben10 Scientist</h2>
+        <h2><strong>Ben10 Student</strong></h2>
         <p>Ben10 is a student who can transform into various aliens using his powerful device called Omnitrix. With the help of transformation he saves the world from villians.</p>
         <h3>Physical/Personality traits</h3>
         <ol>
@@ -18,4 +18,4 @@
 
     </body>
 
-</Html>
+</html>
