used nested ordered list

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <h3>Activities I do at my favorite vacation spot.</h3>
         <ol>
             <li>Enjoy the view.</li>
-            <li>Bike ride rod ghat roads.</li>
+            <li>Bike ride on ghat roads.</li>
+            <ol>
+                <li>Speeding</li>
+                <li>follow traffic signs and rules</li>
+            </ol>
             <li>Photoshots.</li>
         </ol>
         <h3>A list of food dishes can be found at my favorite place.</h3>
         <ul>
             <li>Biryani.</li>
-            <ul>
-                <li>Goat Biryani</li>
-                <li>Chicken Biryani</li>
-            </ul>
             <li>Chicken Kabob.</li>
             <li>Goat Paya.</li>
         </ul>
