--- a/bonus.html
+++ b/bonus.html
@@ -14,7 +14,7 @@
             <li>Caring and good leadership skills</li>
         </ol>
 
-        <img src=ben.jpg height="200" width="200" alt="Ben10"
+        <img src=Student.jpg height="200" width="300" alt="Ben10"
 
     </body>
 
