--- a/index.html
+++ b/index.html
@@ -59,20 +59,29 @@
         </table>
 
         <hr>
-        <blockquote cite="https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button"> How to newline in HTML Button?
+        <blockquote cite="https://stackoverflow.com/questions/32430280/html5-video-fallback-when-all-types-unsupported"> HTML5 video fallback when all types unsupported
         </blockquote >
-        <a href="https://stackoverflow.com/questions/38048131/how-to-newline-in-html-button"> Click here</a>
+        <a href="https://stackoverflow.com/questions/32430280/html5-video-fallback-when-all-types-unsupported"> Click here</a>
 
         <pre>
-            <button>
-            some
-            <br />
-            text
-          </button>
-
-          <input type="button" value="some&#13;&#10;text" />
-
-          <input type="button" value="some&#x00A;text" />
+            <video width="240" height="160" controls>
+                <source src="__VIDEO__.MP4" type="video/mp4" /><!-- Safari / iOS video    -->
+                <source src="__VIDEO__.OGV" type="video/ogg" /><!-- Firefox / Opera / Chrome10 -->
+                <!-- fallback to Flash: -->
+                <object width="240" height="160" type="application/x-shockwave-flash" data="__FLASH__.SWF">
+                    <!-- Firefox uses the `data` attribute above, IE/Safari uses the param below -->
+                    <param name="movie" value="__FLASH__.SWF" />
+                    <param name="flashvars" value="controlbar=over&amp;image=__POSTER__.JPG&amp;file=__VIDEO__.MP4" />
+                    <!-- fallback image. note the title field below, put the title of the video there -->
+                    <img src="__VIDEO__.JPG" width="240" height="160" alt="__TITLE__"
+                         title="No video playback capabilities, please download the video below" />
+                </object>
+            </video>
+            <!-- you *must* offer a download link as they may be able to play the file locally. customise this bit all you want -->
+            <p>	<strong>Download Video:</strong>
+                Closed Format:	<a href="__VIDEO__.MP4">"MP4"</a>
+                Open Format:	<a href="__VIDEO__.OGV">"Ogg"</a>
+            </p>
         </pre>
     </body>
 </html>
