--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h2>Favorite vacation spot</h2>
         <p>My favorite vacation spot is <b>Hoskote</b>, located in Bangalore, Karnataka state, India. I often go for bike rides with my <b>friends</b> in cold weather, wear jackets and enjoy the cool breeze while riding, and go to eat <b>hoskote mani dum biryani</b> at <b>4am</b></p>
         <hr>
+        <section>
         <h2>Activites and Food Dishes</h2>
         <h3>Activities I do at my favorite vacation spot.</h3>
         <ol>
@@ -26,6 +27,7 @@
             <li>Chicken Kabob.</li>
             <li>Goat Paya.</li>
         </ul>
+        </section>
         <a href="Mystats.html"> My Profile</a>
 
         <hr>
